<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Database Application</string>
 
    <string name="add_directions">Fill in both fields with text and click the "add" button.</string>
    <string name="add">add</string>
 
    <string name="delete_directions">To delete a row, type the "id" of the row in the field provided and press the "delete" button.</string>
    <string name="delete">delete</string>
 
    <string name="update_directions">To update a row, type the "id" of the row in the first field and type the new information into the next two fields.</string>
    <string name="retrieve">get</string>
    <string name="update">update</string>
 
    <string name="th_id">ID</string>
    <string name="th_text_one">Text Field One</string>
    <string name="th_text_two">Text Field Two</string>
</resources>